fixed alignment of title

--- a/homepage/src/styles.css
+++ b/homepage/src/styles.css
@@ -71,7 +71,7 @@ div {
 
 .banner {
     position: relative;
-    left: 50%;
+    text-align: center;
 }
 
 .todos-container {
